# plain_vulkan

./: .gitignore  LICENSE  README.md  rebar.config
.circleci/: config.yml
.circleci/images/primary/: Dockerfile
c_src/: plain_vulkan.c  plain_vulkan.d
crates/plain_vulkan/: Cargo.toml
crates/plain_vulkan/src/: lib.rs
include/: plain_vulkan.hrl
shaders_src/: shader.comp
src/: plain_vulkan.app.src  plain_vulkan.erl  plain_vulkan_app.erl  plain_vulkan_sup.erl  plain_vulkan_util.erl  pvk_devices_sup.erl  pvk_instance_holder.erl  pvk_instance_sup.erl
test/: plain_vulkan_tests.erl
